# langchain_updated

./: pyproject.toml  requirements.txt
deepagents/: 1-deepagentsintro.ipynb  2-deepagentscustomization.ipynb
general_concepts/: general_learning_1.ipynb  general_learning_2.ipynb  general_learning_3.ipynb  general_learning_6.ipynb  gitlab_langgraph_testgen.py
updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb  3-tools.ipynb  4-messages.ipynb  5-structuredoutput.ipynb  6-middleware.ipynb
