[project]
name = "langchainupdated"
version = "0.1.0"
description = "langchainupdated project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.76.0",
    "deepagents>=0.3.3",
    "ipykernel>=7.1.0",
    "langchain==1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-google-vertexai>=3.2.0",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.19",
    "tiktoken>=0.12.0",
]
